--- a/style.css
+++ b/style.css
@@ -1,15 +1,65 @@
 body{
-    background-color: grey;
-    color: white;
+    background-color: hsl(0, 0%, 100%);
+    color: hsl(0, 0%, 0%);
     font-family: 'Lato', sans-serif;
+    margin: 0;
+    padding: 0;
+    font-size: 1em;
+}
+
+nav{
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    border-color: white;
+    border-style: none none solid none;
+}
+figure{
+    margin: auto;
 }
 
 .title{
+    font-size: 1.5em;
     text-align: center;
     text-transform: capitalize;
 }
+
 .main-project-photo{
-    margin: auto;
     width: 40%;
     height: auto;
+}
+
+ul.nav-links{
+    padding: 0;
+    margin: 0;
+}
+
+li.nav-links{
+    list-style-type: none;
+    display: inline;
+}
+.link-button{
+    background-color: hsl(0, 0%, 100%);
+    color: black;
+    text-align: center;
+    padding: 10px 10px 10px 10px;
+    margin: 0 10px 0 10px;
+    text-decoration: none;
+    text-transform: capitalize;
+
+    font-size: 1.5em;
+
+}
+.project-grid{
+    display: grid;
+    grid-template-rows: 1fr 1fr 1fr;
+    grid-template-columns: 1fr 1fr 1fr;/*repeat(autofill, minmax(200px,500px));*/
+    grid-gap: 10px 10px;
+}
+.project{
+    padding: 20px;
+    text-align: center;
+    background-color: white;
+    border-style: solid;
+    text-transform: capitalize;
 }
