--- a/style.css
+++ b/style.css
@@ -63,3 +63,26 @@ li.nav-links{
     border-style: solid;
     text-transform: capitalize;
 }
+/*.contact{
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    grid-template-areas: "map contact"
+}
+.contact-info{
+    grid-area: contact;
+    display: grid;
+    grid-template-rows: 1fr 1fr;
+}*/
+
+.contact {
+    display: flex;
+    justify-content: space-around;
+}
+
+.contact-info {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-content: center;
+}
+    
