--- a/style.css
+++ b/style.css
@@ -5,23 +5,45 @@ body{
     margin: 0;
     padding: 0;
     font-size: 1em;
+    text-align: center;
 }
 
 nav{
     display: flex;
     justify-content: space-between;
     align-items: center;
-    border-color: white;
-    border-style: none none solid none;
+    background-color: black;
+    border-style: none;
+    height: 4vh;
 }
-figure{
-    margin: auto;
+.selected-page{
+    background-color: hsl(0, 0%, 100%);
+    color: black;
+    padding: 4vh 20px 4vh 20px;
+    margin: 0;
+    text-decoration: none;
+    text-transform: capitalize;
+    font-size: 1.5em;
+}
+.unselected-page{
+    color: hsl(0, 0%, 100%); 
+    padding: 4vh 20px 4vh 20px;
+    margin: 0;
+    text-decoration: none;
+    text-transform: capitalize;
+    font-size: 1.5em;
 }
 
-.title{
-    font-size: 1.5em;
-    text-align: center;
-    text-transform: capitalize;
+#intro{
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    height: 90vh;
+}
+
+figure{
+    margin: auto;
 }
 
 .main-project-photo{
@@ -38,6 +60,8 @@ li.nav-links{
     list-style-type: none;
     display: inline;
 }
+
+
 .link-button{
     background-color: hsl(0, 0%, 100%);
     color: black;
@@ -46,15 +70,15 @@ li.nav-links{
     margin: 0 10px 0 10px;
     text-decoration: none;
     text-transform: capitalize;
-
     font-size: 1.5em;
 
 }
 .project-grid{
     display: grid;
     grid-template-rows: 1fr 1fr 1fr;
-    grid-template-columns: 1fr 1fr 1fr;/*repeat(autofill, minmax(200px,500px));*/
+    grid-template-columns: repeat(auto-fill, minmax(300px,3fr) );
     grid-gap: 10px 10px;
+    padding: 1vw;
 }
 .project{
     padding: 20px;
@@ -75,11 +99,7 @@ li.nav-links{
 }*/
 
 .contact {
-    display: flex;
-    justify-content: space-around;
-}
-
-.contact-info {
+    height: 90vh;
     display: flex;
     flex-direction: column;
     justify-content: center;
