--- a/style.css
+++ b/style.css
@@ -4,7 +4,7 @@ body{
     font-family: 'Lato', sans-serif;
     margin: 0;
     padding: 0;
-    font-size: 1em;
+    font-size: 1rem;
     text-align: center;
 }
 
@@ -23,7 +23,7 @@ nav{
     margin: 0;
     text-decoration: none;
     text-transform: capitalize;
-    font-size: 1.5em;
+    font-size: 1.5rem;
 }
 .unselected-page{
     color: hsl(0, 0%, 100%); 
@@ -31,7 +31,7 @@ nav{
     margin: 0;
     text-decoration: none;
     text-transform: capitalize;
-    font-size: 1.5em;
+    font-size: 1.5rem;
 }
 
 #intro{
@@ -43,11 +43,11 @@ nav{
 }
 
 figure{
-    margin: auto;
+    margin: 10vh;
 }
 
 .main-project-photo{
-    width: 40%;
+    width: 50vw;
     height: auto;
 }
 
@@ -76,12 +76,15 @@ li.nav-links{
 .project-grid{
     display: grid;
     grid-template-rows: 1fr 1fr 1fr;
-    grid-template-columns: repeat(auto-fill, minmax(300px,3fr) );
-    grid-gap: 10px 10px;
-    padding: 1vw;
+    grid-template-columns: repeat(auto-fill, minmax(400px,3fr) );
+    grid-gap: 2vh 2vh;
+    padding: 2vw;
 }
 .project{
+    display: flex;
+    flex-direction: column;
     padding: 20px;
+    height: 10vh; 
     text-align: center;
     background-color: white;
     border-style: solid;
