--- a/style.css
+++ b/style.css
@@ -4,10 +4,9 @@ body{
     font-family: 'Lato', sans-serif;
     margin: 0;
     padding: 0;
-    font-size: 1rem;
+    font-size: 1.5rem;
     text-align: center;
 }
-
 nav{
     display: flex;
     justify-content: space-between;
@@ -16,41 +15,6 @@ nav{
     border-style: none;
     height: 4vh;
 }
-.selected-page{
-    background-color: hsl(0, 0%, 100%);
-    color: black;
-    padding: 4vh 20px 4vh 20px;
-    margin: 0;
-    text-decoration: none;
-    text-transform: capitalize;
-    font-size: 1.5rem;
-}
-.unselected-page{
-    color: hsl(0, 0%, 100%); 
-    padding: 4vh 20px 4vh 20px;
-    margin: 0;
-    text-decoration: none;
-    text-transform: capitalize;
-    font-size: 1.5rem;
-}
-
-#intro{
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-    height: 90vh;
-}
-
-figure{
-    margin: 10vh;
-}
-
-.main-project-photo{
-    width: 50vw;
-    height: auto;
-}
-
 ul.nav-links{
     padding: 0;
     margin: 0;
@@ -61,9 +25,57 @@ li.nav-links{
     display: inline;
 }
 
+.page{
+    color: hsl(0, 0%, 100%); 
+    padding: 4vh 20px 4vh 20px;
+    margin: 0;
+    text-decoration: none;
+    text-transform: capitalize;
+    font-size: 1.5rem;
+}
+.page.selected{
+    background-color: hsl(0, 0%, 100%);
+    color: black;
+}
+
+#intro{
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    height: 100vh;
+}
+
+.summary-grid{
+    display: grid;
+    grid-template-areas: 'headliner headliner headliner' 'photo photo photo' 'objectives challenges results';
+    grid-template-columns: 1fr 1fr 1fr;
+    grid-template-rows: 25vh 75vh 2fr;
+    grid-gap: 1rem;
+}
+.headliner{
+    text-transform: capitalize;
+    grid-area: headliner;
+}
+figure.cover{
+    grid-area: photo;
+}
+.cover{
+    height: 60vh;
+    width: auto;
+}
+.objectives{
+    grid-area: objectives;
+}
+.challenges{
+    grid-area: challenges;
+}
+.results{
+    grid-area: results;
+}
 
 .link-button{
-    background-color: hsl(0, 0%, 100%);
+    background-color: hsl(29, 100%, 49%);
     color: black;
     text-align: center;
     padding: 10px 10px 10px 10px;
@@ -75,17 +87,16 @@ li.nav-links{
 }
 .project-grid{
     display: grid;
-    grid-template-rows: 1fr 1fr 1fr;
-    grid-template-columns: repeat(auto-fill, minmax(400px,3fr) );
+    grid-template-columns: repeat(auto-fit, minmax(400px,3fr) );
     grid-gap: 2vh 2vh;
     padding: 2vw;
 }
 .project{
     display: flex;
     flex-direction: column;
+    justify-content: space-between;
     padding: 20px;
-    height: 10vh; 
-    text-align: center;
+    height: 12rem; 
     background-color: white;
     border-style: solid;
     text-transform: capitalize;
@@ -99,7 +110,7 @@ li.nav-links{
     grid-area: contact;
     display: grid;
     grid-template-rows: 1fr 1fr;
-}*/
+}
 
 .contact {
     height: 90vh;
@@ -107,5 +118,5 @@ li.nav-links{
     flex-direction: column;
     justify-content: center;
     align-content: center;
-}
+}*/
     
