--- a/style.css
+++ b/style.css
@@ -78,15 +78,24 @@ figure.cover{
 }
 
 .link-button{
-    background-color: hsl(29, 100%, 49%);
+    border-style: solid;
+    border-color: hsl(199, 98%, 48%);
     color: black;
     text-align: center;
     padding: 10px 10px 10px 10px;
     margin: 0 10px 0 10px;
     text-decoration: none;
-    text-transform: capitalize;
+    border-radius: 2rem ;
     font-size: 1.5em;
-
+    min-width: 7em;
+    max-width: 20em;
+}
+.link-button:hover{
+    color: white;
+    background-color: hsl(199, 98%, 48%);
+}
+.link-button.address{
+    width: 15em;
 }
 .project-grid{
     display: grid;
@@ -102,6 +111,7 @@ figure.cover{
     height: 12rem; 
     background-color: white;
     border-style: solid;
+    border-radius: 2rem ;
     text-transform: capitalize;
 }
 
@@ -114,16 +124,28 @@ figure.cover{
     align-items: center;
 }
 .contact-info{
-    display: grid;
-    grid-template-areas: 'email address' 'phone number';
-    justify-items: end;
+    display:flex;
+    flex-direction: column;
+    justify-content: space-evenly;
     align-items: center;
-    grid-template-columns: 1fr 1fr;
+    height: 30vh;
 }
-.contact-info .text{
-    justify-items: start;
-}
+
+.container {
+    position: relative;
+    overflow: hidden;
+    width: 100%;
+    padding-top: 56.25%; /* 16:9 Aspect Ratio (divide 9 by 16 = 0.5625) */
+  }
+
 .map{ 
+    position: absolute;
+    top: 0;
+    left: 0;
+    bottom: 0;
+    right: 0;
+    width: 100%;
+    height: 100%;
     -webkit-filter: grayscale(100%); 
 }
 
