adding capstone project page
more details to come

--- a/style.css
+++ b/style.css
@@ -13,7 +13,7 @@ nav{
     align-items: center;
     background-color: black;
     border-style: none;
-    height: 4vh;
+    height: 2.2em;
 }
 ul.nav-links{
     padding: 0;
