--- a/style.css
+++ b/style.css
@@ -1,6 +1,6 @@
 body{
-    background-color: hsl(0, 0%, 100%);
-    color: hsl(0, 0%, 0%);
+    background-color: #f6f6f6;
+    color: #111111;
     font-family: 'Lato', sans-serif;
     margin: 0;
     padding: 0;
@@ -11,7 +11,7 @@ nav{
     display: flex;
     justify-content: space-between;
     align-items: center;
-    background-color: black;
+    background-color: #111111;
     border-style: none;
     height: 2.2em;
 }
@@ -25,7 +25,7 @@ li.nav-links{
 }
 
 .page{
-    color: hsl(0, 0%, 100%); 
+    color: #f6f6f6;
     padding: 4vh 20px 4vh 20px;
     margin: 0;
     text-decoration: none;
@@ -33,8 +33,8 @@ li.nav-links{
     font-size: 1.5rem;
 }
 .page.selected{
-    background-color: hsl(0, 0%, 100%);
-    color: black;
+    background-color: #f6f6f6;
+    color: #111111;
 }
 
 #intro{
@@ -89,7 +89,7 @@ figure.cover{
 .link-button{
     border-style: solid;
     border-color: hsl(199, 98%, 48%);;
-    color: black;
+    color: #111111;
     text-align: center;
     padding: 10px 10px 10px 10px;
     margin: 0 10px 0 10px;
@@ -119,7 +119,7 @@ figure.cover{
     justify-content: space-between;
     padding: 20px;
     height: 12rem; 
-    background-color: white;
+    background-color: #f6f6f6;
     border-style: solid;
     border-radius: 2rem ;
     text-transform: capitalize;
