--- a/style.css
+++ b/style.css
@@ -7,6 +7,7 @@ body{
     font-size: 1.5rem;
     text-align: center;
 }
+
 nav{
     display: flex;
     justify-content: space-between;
@@ -15,10 +16,13 @@ nav{
     border-style: none;
     height: 2.2em;
 }
+
 ul.nav-links{
     padding: 0;
     margin: 0;
 }
+
+
 li.nav-links{
     list-style-type: none;
     display: inline;
@@ -66,7 +70,7 @@ p.clean{
     text-align: justify;
 }
 
-figure.cover{
+figure{
     grid-area: photo;
 }
 .cover{
@@ -98,6 +102,7 @@ figure.cover{
     font-size: 1.5em;
     min-width: 7em;
     max-width: 20em;
+    max-height: 1.5em;
 }
 .link-button:hover{
     color: white;
@@ -112,6 +117,7 @@ figure.cover{
     grid-template-columns: repeat(auto-fit, minmax(500px,3fr) );
     grid-gap: 2vh 2vh;
     padding: 2vw;
+    
 }
 
 img.icon{
@@ -122,7 +128,8 @@ img.icon{
 .project{
     display: flex;
     flex-direction: column;
-    justify-content: space-between;
+    justify-content: center;
+    align-items: center;
     padding: 20px;
     height: 30rem; 
     background-color: #f6f6f6;
